src/test/ui/issue-23173.stderr
error[E0599]: no variant named `Homura` found for type `Token` in the current scope
  --> $DIR/issue-23173.rs:23:16
   |
11 | enum Token { LeftParen, RightParen, Plus, Minus, /* etc */ }
   | ---------- variant `Homura` not found here
...
23 |     use_token(&Token::Homura);
   |                ^^^^^^^^^^^^^ variant not found in `Token`

error[E0599]: no function or associated item named `method` found for type `Struct` in the current scope
  --> $DIR/issue-23173.rs:26:5
   |
13 | struct Struct {
   | ------------- function or associated item `method` not found for this
...
26 |     Struct::method();
   |     ^^^^^^^^^^^^^^ function or associated item not found in `Struct`

error[E0599]: no function or associated item named `method` found for type `Struct` in the current scope
  --> $DIR/issue-23173.rs:29:5
   |
13 | struct Struct {
   | ------------- function or associated item `method` not found for this
...
29 |     Struct::method;
   |     ^^^^^^^^^^^^^^ function or associated item not found in `Struct`

error[E0599]: no associated item named `Assoc` found for type `Struct` in the current scope
  --> $DIR/issue-23173.rs:32:5
   |
13 | struct Struct {
   | ------------- associated item `Assoc` not found for this
...
32 |     Struct::Assoc;
   |     ^^^^^^^^^^^^^ associated item not found in `Struct`

error: aborting due to 4 previous errors

